<resources>
    <string name="app_name">Boom UI</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_orsc">ORSC</string>
    <string name="lbl_buy">Buy</string>
    <string name="lbl_get_loan">Get Loan</string>
    <string name="lbl_market_is_open">Market is open</string>
    <string name="lbl_market_is_close">Market is Closed</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_about">About</string>
    <string name="lbl_100">100 </string>
    <string name="lbl_hello_mark">Hello Mark</string>
    <string name="lbl_wallet">Wallet</string>
    <string name="msg_egp_1_02_12_5">EGP 1.02 (12.5%)</string>
    <string name="lbl_insights">Insights</string>
    <string name="lbl_previous_orders">Previous Orders</string>
    <string name="lbl_today">Today</string>
    <string name="lbl_02_may_2023">02 May 2023</string>
    <string name="lbl_1d">1D</string>
    <string name="lbl_04_aug_2023">04 Aug 2023</string>
    <string name="lbl_3m">3M</string>
    <string name="msg_cancelled_by_sy">Cancelled by system</string>
    <string name="lbl_12_52">+12.5%</string>
    <string name="lbl_12_53">-12.5%</string>
    <string name="msg_total_investmen">Total Investment</string>
    <string name="msg_today_market_si">Today Market Signals</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_abuk">ABUK</string>
    <string name="lbl_egp_825">EGP 825</string>
    <string name="lbl_egp_8_252">EGP 8.25</string>
    <string name="lbl_deposit">Deposit</string>
    <string name="lbl_12_5">12.5%</string>
    <string name="lbl_egp_4_784_00">EGP 4,784.00</string>
    <string name="lbl_6m">6M</string>
    <string name="msg_abu_qir_fertili">Abu Qir Fertilizers</string>
    <string name="lbl_egp_7_87">EGP 7.87</string>
    <string name="msg_sell_complete">Sell - Completed</string>
    <string name="lbl_egp_18_000">EGP 18,000</string>
    <string name="lbl_my_portfolio">My Portfolio</string>
    <string name="lbl_buy_orders">Buy Orders</string>
    <string name="lbl_egp632_00">EGP632.00</string>
    <string name="lbl_6">6</string>
    <string name="lbl_egp_8_56">EGP 8.56</string>
    <string name="lbl_total_value">Total Value</string>
    <string name="lbl_feed">Feed</string>
    <string name="lbl_30_stocks">30 Stocks</string>
    <string name="msg_22_july_2023">22 July 2023 | 16:33</string>
    <string name="lbl_profit">Profit</string>
    <string name="lbl_shares">Shares</string>
    <string name="lbl_pro">PRO</string>
    <string name="lbl_last_price">Last Price</string>
    <string name="lbl_transfer">Transfer</string>
    <string name="lbl_all_orders">All Orders</string>
    <string name="lbl_sell">SELL</string>
    <string name="lbl_sell_orders">Sell Orders</string>
    <string name="lbl_1m">1M</string>
    <string name="lbl_news">News</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_my_position">My Position</string>
    <string name="lbl_acc_01">Acc 01</string>
    <string name="lbl_1w">1W</string>
    <string name="lbl_9_41">9:41</string>
    <string name="msg_orascom_constru">Orascom Constructions</string>
    <string name="lbl_5y">5Y</string>
    <string name="lbl_orders">Orders</string>
    <string name="lbl_1y">1Y</string>
    <string name="lbl_explore">Explore</string>
    <string name="lbl_buy_cancelled">Buy - Cancelled</string>
    <string name="lbl_open_orders">Open Orders</string>
    <string name="lbl_buy_open">Buy - Open</string>
    <string name="lbl_egp_225_000">EGP 225,000</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>