<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtORSC"
            style="@style/txtIntersemibold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_orsc"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtOrascomConstru"
            style="@style/txtInterregular13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/txtORSC"
            android:text="@string/msg_orascom_constru" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

           <androidx.appcompat.widget.LinearLayoutCompat
               android:layout_width="match_parent"
               android:paddingTop="5dp"
               android:layout_height="match_parent">
               <ImageView
                   android:id="@+id/imageVector"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="start"
                   android:scaleType="fitXY"
                   android:src="@drawable/img_vector_green_a700"
                   tools:ignore="ContentDescription"
                   tools:src="@drawable/img_vector_green_a700" />
           </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/txtOneHundredTwentyFiveOne"
                style="@style/txtIntermedium10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_6pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_12_52" />

            <TextView
                android:id="@+id/txtPriceOne"
                style="@style/txtIntermedium10_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="2dp"
                android:layout_gravity="start"
                android:background="@drawable/rectangle_bg_green_a700_radius_2"
                android:ellipsize="end"
                android:gravity="top|start"
                android:singleLine="true"
                android:text="@string/lbl_egp632_00" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/linearRowstockscounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtStocksCounter"
                style="@style/txtSolidRounded_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_weight="0.41"
                android:ellipsize="end"
                android:paddingEnd="@dimen/_2pxh"
                android:paddingStart="@dimen/_2pxh"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:text="@string/lbl_30_stocks" />

            <TextView
                android:id="@+id/txtPriceTwo"
                style="@style/txtInterbold10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:ellipsize="end"
                android:singleLine="true"
                android:textAlignment="textEnd"
                android:text="@string/lbl_egp_4_784_00" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>