<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout android:id="@+id/linearRowOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_1pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearRowlock"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8pxv"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="horizontal">
                <ImageView android:id="@+id/imageLock"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_12pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/lock_closed"
                    tools:ignore="ContentDescription"
                    />
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBuyOpen"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.81"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    style="@style/txtIntermedium10_1"
                    android:text="@string/lbl_buy_open"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowedit"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_width="0dp"
                android:orientation="horizontal">
                <ImageButton
                    android:background="@drawable/rectangle_bg_deep_purple_50_radius_16"
                    android:id="@+id/btnEdit"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_width="@dimen/_32pxh"
                    android:paddingHorizontal="@dimen/_8pxh"
                    android:paddingVertical="@dimen/_8pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_edit" tools:ignore="ContentDescription"/>
                <FrameLayout android:id="@+id/frameStackcart"
                    android:layout_height="@dimen/_16pxv"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="@dimen/_14pxh" style="@style/groupStylecornerRadius_4">

                    <ImageView
                        android:id="@+id/imageCart"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_16pxh"
                        android:layout_gravity="start"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_cart"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_cart" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3pxh"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnname"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtName"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_9pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    style="@style/txtInterlight10"
                    android:text="@string/lbl_name"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtORSC"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    style="@style/txtIntersemibold13"
                    android:text="@string/lbl_orsc"/>
            </LinearLayout>
            <View android:background="@color/bluegray_100"
                android:id="@+id/lineVectorSeventyTwo"
                android:layout_height="@dimen/_25pxv"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.0" android:layout_width="1dp"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnshares"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_width="wrap_content"
                android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtShares"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    style="@style/txtInterlight10"
                    android:text="@string/lbl_shares"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_8pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    style="@style/txtIntersemibold13"
                    android:text="@string/lbl_100"/>
            </LinearLayout>

            <View
                android:id="@+id/lineVectorSeventyThree"
                android:layout_width="1dp"
                android:layout_height="@dimen/_25pxv"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.0"
                android:background="@color/bluegray_100" />
            <LinearLayout
                android:gravity="start"
                android:id="@+id/linearColumntotalvalue"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_width="wrap_content"
                android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTotalValue"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtInterlight10"
                    android:text="@string/lbl_total_value"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPriceTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    style="@style/txtIntersemibold13"
                    android:text="@string/lbl_egp_825"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceThree"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:gravity="end"
                android:layout_width="match_parent"
                android:singleLine="true"
                style="@style/txtInterlight10_1"
                android:text="@string/msg_22_july_2023"/>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bluegray_100"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#EFEFFF"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3" />


    </LinearLayout>


</androidx.cardview.widget.CardView>