<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtORSC"
            style="@style/txtIntersemibold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_orsc"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtOrascomConstru"
            style="@style/txtInterregular13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/txtORSC"
            android:text="@string/msg_orascom_constru" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnFavorite"
            app:layout_constraintStart_toEndOf="@+id/txtOrascomConstru"
            app:layout_constraintTop_toTopOf="parent">



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/btnFavorite"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="3dp">

                    <ImageView
                        android:id="@+id/imageVector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowup"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_arrowup" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <TextView
                    android:id="@+id/txtOneHundredTwentyFiveOne"
                    style="@style/txtIntermedium10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/lbl_12_52" />




            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:id="@+id/txtPrice"
                style="@style/txtInterbold13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:singleLine="true"
                android:text="@string/lbl_egp_18_000" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="@dimen/_24pxh"
            android:layout_height="@dimen/_24pxh"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:paddingHorizontal="@dimen/_6pxh"
            android:paddingVertical="@dimen/_6pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.cardview.widget.CardView>